--- a/src/main/webapp/sap.ui.core.tutorial.odatav4.02/i18n/i18n.properties
+++ b/src/main/webapp/sap.ui.core.tutorial.odatav4.02/i18n/i18n.properties
@@ -19,6 +19,20 @@ searchFieldPlaceholder=Type in a last name
 #MSG: Message for sorting
 sortMessage=Users sorted by {0}
 
+# Toolbar
+#XBUT: Button text for save
+saveButtonText=Save
+
+#XBUT: Button text for cancel
+cancelButtonText=Cancel
+
+#XBUT: Button text for add user
+createButtonText=Add User
+
+# Messages
+#XMSG: Message for user changes sent to the service
+changesSentMessage=User data sent to the server
+
 #MSG: Suffix for sorting by LastName, ascending
 sortAscending=last name, ascending
 
