feat: Saving work, Create working order, no update function. Demo version 23.

--- a/src/main/webapp/A0000Users/i18n/i18n.properties
+++ b/src/main/webapp/A0000Users/i18n/i18n.properties
@@ -1,4 +1,4 @@
-title=GreenTrak • User Profile
+title=GreenTrak • User Profiles
 appTitle=Basic Template
 appDescription=Blank app as starting point for your app development
 #MSG: Message for sorting
