--- a/src/main/webapp/sap.ui.core.tutorial.odatav4.02/i18n/i18n.properties
+++ b/src/main/webapp/sap.ui.core.tutorial.odatav4.02/i18n/i18n.properties
@@ -62,5 +62,11 @@ firstNameLabelText=First Name
 #XFLD: Label for Last Name
 lastNameLabelText=Last Name
 
+#XBUT: Button text for delete user
+deleteButtonText=Delete User
+
+#XMSG: Message for user deleted
+deletionSuccessMessage=User deleted
+
 #XFLD: Label for Age
 ageLabelText=Age
