feat: Working order, no update function. Demo version 35.

--- a/src/main/webapp/A0000Users/i18n/i18n.properties
+++ b/src/main/webapp/A0000Users/i18n/i18n.properties
@@ -1,4 +1,5 @@
 title=GreenTrak • User Profiles
+title2=GreenTrak • Personal Data of
 appTitle=Basic Template
 appDescription=Blank app as starting point for your app development
 #MSG: Message for sorting
